[gd_scene load_steps=6 format=3 uid="uid://bofqkfrx24syk"]

[ext_resource type="PackedScene" uid="uid://7r64eqnfq7fl" path="res://scenes/machines/machine.tscn" id="1_atxg7"]
[ext_resource type="Script" uid="uid://lp70fjh3iunp" path="res://scenes/machines/scarecrow.gd" id="2_rtb2u"]
[ext_resource type="Texture2D" uid="uid://ll02vmgltufd" path="res://graphics/icons/scarecrow.png" id="2_t3vp4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rtb2u"]
size = Vector2(12, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_chruw"]
radius = 67.18631

[node name="Scarecrow" instance=ExtResource("1_atxg7")]
z_index = 4
collision_mask = 4
script = ExtResource("2_rtb2u")

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_rtb2u")

[node name="Sprite2D" type="Sprite2D" parent="." index="1"]
texture = ExtResource("2_t3vp4")

[node name="Area2D" type="Area2D" parent="." index="2"]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource("CircleShape2D_chruw")

[node name="Timer" type="Timer" parent="." index="3"]
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
